# Copyright (c) 2021 2bllw8
# SPDX-License-Identifier: GPL-3.0-only
android_library(
    name = "task",
    srcs = glob([
        "**/*.java",
    ]),
    manifest = "AndroidManifest.xml",
    visibility = [
        "//java/exe/bbllw8/anemo/documents/receiver:__pkg__",
        "//java/exe/bbllw8/anemo/documents/snippet:__pkg__",
        "//java/exe/bbllw8/anemo/editor/help:__pkg__",
        "//java/exe/bbllw8/anemo/editor/main:__pkg__",
    ],
    deps = [
        "@maven//:androidx_annotation_annotation",
    ],
)
