# Copyright (c) 2021 2bllw8
# SPDX-License-Identifier: GPL-3.0-only
android_library(
    name = "home",
    srcs = glob([
        "**/*.java",
    ]),
    manifest = "AndroidManifest.xml",
    visibility = [
        "//java/exe/bbllw8/anemo/documents/password:__pkg__",
        "//java/exe/bbllw8/anemo/documents/provider:__pkg__",
        "//java/exe/bbllw8/anemo/documents/receiver:__pkg__",
        "//java/exe/bbllw8/anemo/documents/snippet:__pkg__",
    ],
    deps = [
        "@maven//:androidx_annotation_annotation",
    ],
)
