# Copyright (c) 2021 2bllw8
# SPDX-License-Identifier: GPL-3.0-only
android_library(
    name = "password",
    srcs = glob([
        "**/*.java",
    ]),
    manifest = "AndroidManifest.xml",
    resource_files = glob([
        "res/**",
    ]),
    visibility = [
        "//:__pkg__",
    ],
    deps = [
        "//java/exe/bbllw8/anemo/documents/home",
        "//java/exe/bbllw8/anemo/documents/lock",
        "//java/exe/bbllw8/anemo/shell",
        "@maven//:androidx_annotation_annotation",
    ],
)
